--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -9,14 +9,15 @@
 	#quip
 		%p
 			= link_to @project.url, @project.url
-- if @project.user_id == current_user.id
-	#subheading 
-		%h2 Modify Project
-	#quip
-		%p
-			Either
-			= link_to 'edit', edit_project_path(@project)
-			or
-			= link_to 'delete', project_path(@project), :method => :delete
+- if current_user
+	- if @project.user_id == current_user.id
+		#subheading 
+			%h2 Modify Project
+		#quip
+			%p
+				Either
+				= link_to 'edit', edit_project_path(@project)
+				or
+				= link_to 'delete', project_path(@project), :method => :delete
 
 = render 'back'
