--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 	<header>
 		<div id="login">
 		<% if current_user %>
-			<%= link_to 'Log Out', sign_out_path %>
+			<%= link_to '[Log Out]', sign_out_path %>
 		<% else %>
-			<%= link_to 'Log In', '/auth/twitter' %>
+			<%= link_to '[Log In]', '/auth/twitter' %>
 		<% end  %>
 		</div>
 		<div id="title">
