--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -28,6 +28,7 @@
 		%h2 Or post a new project
 	#quip
 		%p Provide a project name, an optional website, and the project's description.
+		%p Make sure to include contact information somewhere, either through your website or in the description!
 	= render 'form'
 - else
 	#subheading
