--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,9 +4,10 @@
 @import url('http://fonts.googleapis.com/css?family=Tinos&subset=latin');
 body{
 	font-family: "Tinos";
+	background-color: #3d3d3d;
 }
 header{
-	width:800px;
+	width:700px;
 	margin: 0px auto;
 }
 h1, h2, h3 {
@@ -31,7 +32,12 @@ p{
 	margin: 0px 0px 40px 0px;
 }
 
-#login{
+#login a{
+	font-variant: small-caps;
+	font-size: 20px;
+	text-decoration: none;
+	font-weight: normal;
+	font-style: normal;
 }
 h2{
 	font-size:40px	
@@ -75,4 +81,11 @@ input, textarea{
 }
 #bottom_nav{
 	text-align: center;
+}
+#content {
+	width: 700px;
+	margin: 40px auto 40px auto;
+	padding: 10px;
+	background-color: white;
+	border: 2px solid #dfdfdf;
 }
