--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+	<div id="content">
 	<header>
 		<div id="login">
 		<% if current_user %>
@@ -31,6 +32,7 @@
 	<% end %>
 
 <%= yield %>
+</div>
 
 </body>
 </html>
