--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 		<%= link_to '[Log Out]', sign_out_path %>
 	<% else %>
 		<%= link_to '[Log In]', '/auth/twitter' %>
+		<% link_to '[Facebook]', '/auth/facebook' %>
 	<% end  %>
 	</div>
 	<br />
