--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,16 @@
   <title>HackLikeMe</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag 'http://connect.facebook.net/en_US/all.js' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
 	<div id="login">
 	<% if current_user %>
-		<%= link_to '[Log Out]', sign_out_path %>
+		<%= link_to '[Sign Out]', sign_out_path %>
 	<% else %>
-		<%= link_to '[Log In]', '/auth/twitter' %>
-		<% link_to '[Facebook]', '/auth/facebook' %>
+		<%= link_to (image_tag 'twitter.png', :width => 30), '/auth/twitter' %>
+		<%= link_to (image_tag 'facebook.png', :width => 30), '/auth/facebook' %>
 	<% end  %>
 	</div>
 	<br />
