--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -35,5 +35,7 @@
 		%h2 Want to Post?
 	#quip
 		%p 
-			It's quite easy! You can sign in 
-			=link_to 'with Twitter.', '/auth/twitter'
+			It's quite easy! You can sign in with
+			=link_to 'Twitter', '/auth/twitter'
+			or
+			=link_to 'Facebook', '/auth/facebook'
